test_src/compiler_errors/types/boolean/GreaterThanOrEqualToBoolError2.b
class GreaterThanOrEqualToBoolError2 {
    void test() {
        println(true >= 2);
    }
}
